fix(dwcdp): keep datapackage field types in resulting parquet